--- a/src/engine/xrPhysics/xrPhysics.vcproj
+++ b/src/engine/xrPhysics/xrPhysics.vcproj
@@ -285,7 +285,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vorbisfile_static.lib ogg_static.lib OpenAL32.lib"
+				AdditionalDependencies="libvorbisfile_static.lib libogg_static.lib OpenAL32.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\sdk\libraries;..\..\..\libraries"
 				GenerateDebugInformation="true"
@@ -386,7 +386,7 @@
 				Name="VCX360LinkerTool"
 				IgnoreImportLibrary="true"
 				AdditionalOptions="/NODEFAULTLIB:LIBCMTD"
-				AdditionalDependencies="vorbisfile_static_d.lib ogg_static_d.lib OpenAL32.lib"
+				AdditionalDependencies="libvorbisfile_static_d.lib libogg_static_d.lib OpenAL32.lib"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="..\..\sdk\libraries;..\..\..\libraries"
@@ -479,7 +479,7 @@
 			/>
 			<Tool
 				Name="VCX360LinkerTool"
-				AdditionalDependencies="vorbisfile_static.lib ogg_static.lib OpenAL32.lib"
+				AdditionalDependencies="libvorbisfile_static.lib libogg_static.lib OpenAL32.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\sdk\libraries;..\..\..\libraries"
 				GenerateDebugInformation="true"
@@ -571,7 +571,7 @@
 			/>
 			<Tool
 				Name="VCX360LinkerTool"
-				AdditionalDependencies="vorbisfile_static.lib ogg_static.lib OpenAL32.lib"
+				AdditionalDependencies="libvorbisfile_static.lib libogg_static.lib OpenAL32.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\sdk\libraries;..\..\..\libraries"
 				GenerateDebugInformation="true"
