--- a/src/plugins/Maya/Maya_Export2008.vcxproj.filters
+++ b/src/plugins/Maya/Maya_Export2008.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="Export\Object">
       <UniqueIdentifier>{40453c4c-d0dd-4a49-851d-965c6c829572}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shared Files\VIPM">
+      <UniqueIdentifier>{2151f969-f13a-484f-ab03-bfaba880b149}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shared Files\WML">
+      <UniqueIdentifier>{7a95adf7-5f29-48f8-8847-08dd08540020}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Export\stdafx.cpp">
@@ -32,9 +38,6 @@
     </ClCompile>
     <ClCompile Include="Export\XRayExport.cpp">
       <Filter>Kernel</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Shared\bone.cpp">
-      <Filter>Shared Files\Engine</Filter>
     </ClCompile>
     <ClCompile Include="..\Shared\Envelope.cpp">
       <Filter>Shared Files\Engine</Filter>
@@ -90,13 +93,91 @@
     <ClCompile Include="Export\MayaExport.cpp">
       <Filter>Export\Object</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\Editor\ExportObjectOGF.cpp">
+      <Filter>Shared Files\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\Editor\ExportObjectOGFCalculateTB.cpp">
+      <Filter>Shared Files\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\Editor\bone.cpp">
+      <Filter>Shared Files\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\utils\ETools\object.cpp">
+      <Filter>Shared Files\VIPM</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\utils\ETools\object_sliding.cpp">
+      <Filter>Shared Files\VIPM</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\utils\ETools\PropSlimTools.cpp">
+      <Filter>Shared Files\VIPM</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xrEngine\fmesh.cpp">
+      <Filter>Shared Files\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\Editor\ExportSkeleton.cpp">
+      <Filter>Shared Files\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\RAPIDMinBox.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlApprGaussPointsFit3.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlBox3.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlContBox3.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlContMinBox3.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlEigen.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlMath.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlMatrix2.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlMatrix3.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlMatrix4.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlMinimize1.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlMinimizeN.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlQuaternion.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlSystem.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlVector2.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlVector3.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlVector4.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\editors\ECore\WildMagic\WmlWinSystem.cpp">
+      <Filter>Shared Files\WML</Filter>
+    </ClCompile>
+    <ClCompile Include="Export\camera_exporter.cpp">
+      <Filter>Export\Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Export\Stdafx.h">
       <Filter>Kernel</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Shared\bone.h">
-      <Filter>Shared Files\Engine</Filter>
     </ClInclude>
     <ClInclude Include="..\Shared\envelope.h">
       <Filter>Shared Files\Engine</Filter>
@@ -134,14 +215,83 @@
     <ClInclude Include="..\..\editors\ECore\Editor\itterate_adjacents_dynamic.h">
       <Filter>Shared Files\Editor</Filter>
     </ClInclude>
-    <ClInclude Include="Export\motion.h">
-      <Filter>Shared Files\Editor</Filter>
-    </ClInclude>
     <ClInclude Include="Export\ExportDefines.h">
       <Filter>Export</Filter>
     </ClInclude>
     <ClInclude Include="Export\smoth_flags.h">
       <Filter>Export</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\Editor\ExportObjectOGF.h">
+      <Filter>Shared Files\Editor</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xrEngine\bone.h">
+      <Filter>Shared Files\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlApprGaussPointsFit3.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlBox3.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlContBox3.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlContMinBox3.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlEigen.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlGMatrix.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlGVector.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlMath.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlMatrix.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlMatrix2.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlMatrix3.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlMatrix4.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlMinimize1.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlMinimizeN.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlQuaternion.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlSystem.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlVector.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlVector2.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlVector3.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlVector4.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\editors\ECore\WildMagic\WmlWinSystem.h">
+      <Filter>Shared Files\WML</Filter>
+    </ClInclude>
+    <ClInclude Include="Export\camera_exporter.h">
+      <Filter>Export\Object</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +303,45 @@
     </None>
     <None Include="Export\xrayObjectExportOptions.mel">
       <Filter>Export\Object</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlGMatrix.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlGVector.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlMath.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlMatrix.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlMatrix2.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlMatrix3.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlMatrix4.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlQuaternion.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlSystem.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlVector.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlVector2.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlVector3.inl">
+      <Filter>Shared Files\WML</Filter>
+    </None>
+    <None Include="..\..\editors\ECore\WildMagic\WmlVector4.inl">
+      <Filter>Shared Files\WML</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
